Updated instructions with starter repository URL.

--- a/instructions.ipynb
+++ b/instructions.ipynb
@@ -104,13 +104,13 @@
    "metadata": {},
    "source": [
     "<h2>Navigating the Starter Code</h2>\n",
-    "We have provided you with starter code at [repository-url-here]. The starter code is for a dashboard in Observable Framework and may not be applicable if you choose to use a different framework/language to create your dashboard in.\n",
+    "We have provided you with starter code at https://github.com/CMU-67336-Data-Visualization/final-project-starter-repo.git. The starter code is for a dashboard in Observable Framework and may not be applicable if you choose to use a different framework/language to create your dashboard in.\n",
     "\n",
     "Here are some steps to get you started (only **ONE** partner needs to do this):\n",
     "1. Clone the starter code repository.\n",
-    "2. Remove the link to the remote repository with `git remote remove origin [repository-url-here]`.\n",
+    "2. Remove the link to the remote repository with `git remote remove origin https://github.com/CMU-67336-Data-Visualization/final-project-starter-repo.git`.\n",
     "3. Create a new repository on GitHub. Add the other partner, Professor Shihong (shihongh), Katelyn (kateyzcodes), and Peter (peternotfound114) as collaborators to the repository.\n",
-    "4. Add a link to the newly created remote repository with `git remote add origin [repository-url-here]`.\n",
+    "4. Add a link to the newly created remote repository with `git remote add origin [your-repository-url-here]`.\n",
     "\n",
     "The starter code is configured similarly to the Observable Framework dashboards we have previously worked with.\n",
     "\n",
